[package]
name = "token-lockup"
version = "0.1.0"
authors = ["Script3 Ltd. <gm@script3.io>"]
license = "AGPL-3.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
default = ["standard"]
testutils = ["soroban-sdk/testutils"]
standard = []
blend = []
[dependencies]
soroban-sdk = {workspace = true}

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }